attached_assets/Pasted--Configuring-done-0-0s-Generating-done-0-0s-Build-files-have-been-written-to-home-ru-1743583108333.txt
-- Configuring done (0.0s)
-- Generating done (0.0s)
-- Build files have been written to: /home/runner/workspace/ai_language/build
[ 86%] Built target show_timege_lib
[ 93%] Building CXX object CMakeFiles/ai_lang.dir/src/ai_lang.cpp.o
/home/runner/workspace/ai_language/src/ai_lang.cpp:17:19: error: redefinition of ‘const std::string RESET’
   17 | const std::string RESET = "\033[0m";
      |                   ^~~~~
In file included from /home/runner/workspace/ai_language/src/../include/interpreters/InterpreterFactory.h:5,
                 from /home/runner/workspace/ai_language/src/ai_lang.cpp:1:
/home/runner/workspace/ai_language/src/../include/interpreters/BaseInterpreter.h:17:19: note: ‘const std::string RESET’ previously declared here
   17 | const std::string RESET = "\033[0m";
      |                   ^~~~~
/home/runner/workspace/ai_language/src/ai_lang.cpp:18:19: error: redefinition of ‘const std::string RED’
   18 | const std::string RED = "\033[31m";
      |                   ^~~
/home/runner/workspace/ai_language/src/../include/interpreters/BaseInterpreter.h:18:19: note: ‘const std::string RED’ previously declared here
   18 | const std::string RED = "\033[31m";
      |                   ^~~
/home/runner/workspace/ai_language/src/ai_lang.cpp:19:19: error: redefinition of ‘const std::string GREEN’
   19 | const std::string GREEN = "\033[32m";
      |                   ^~~~~
/home/runner/workspace/ai_language/src/../include/interpreters/BaseInterpreter.h:19:19: note: ‘const std::string GREEN’ previously declared here
   19 | const std::string GREEN = "\033[32m";
      |                   ^~~~~
/home/runner/workspace/ai_language/src/ai_lang.cpp:20:19: error: redefinition of ‘const std::string YELLOW’
   20 | const std::string YELLOW = "\033[33m";
      |                   ^~~~~~
/home/runner/workspace/ai_language/src/../include/interpreters/BaseInterpreter.h:20:19: note: ‘const std::string YELLOW’ previously declared here
   20 | const std::string YELLOW = "\033[33m";
      |                   ^~~~~~
/home/runner/workspace/ai_language/src/ai_lang.cpp:21:19: error: redefinition of ‘const std::string BLUE’
   21 | const std::string BLUE = "\033[34m";
      |                   ^~~~
/home/runner/workspace/ai_language/src/../include/interpreters/BaseInterpreter.h:21:19: note: ‘const std::string BLUE’ previously declared here
   21 | const std::string BLUE = "\033[34m";
      |                   ^~~~
/home/runner/workspace/ai_language/src/ai_lang.cpp:22:19: error: redefinition of ‘const std::string MAGENTA’
   22 | const std::string MAGENTA = "\033[35m";
      |                   ^~~~~~~
/home/runner/workspace/ai_language/src/../include/interpreters/BaseInterpreter.h:22:19: note: ‘const std::string MAGENTA’ previously declared here
   22 | const std::string MAGENTA = "\033[35m";
      |                   ^~~~~~~
/home/runner/workspace/ai_language/src/ai_lang.cpp:23:19: error: redefinition of ‘const std::string CYAN’
   23 | const std::string CYAN = "\033[36m";
      |                   ^~~~
/home/runner/workspace/ai_language/src/../include/interpreters/BaseInterpreter.h:23:19: note: ‘const std::string CYAN’ previously declared here
   23 | const std::string CYAN = "\033[36m";
      |                   ^~~~
make[2]: *** [CMakeFiles/ai_lang.dir/build.make:76: CMakeFiles/ai_lang.dir/src/ai_lang.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:140: CMakeFiles/ai_lang.dir/all] Error 2
make: *** [Makefile:91: all] Error 2